---- Cập Nhật 07/06/2024 ---- * Thêm chức năng đăng nhập bằng Google. * Thêm phần thanh toán phí dịch vụ cho đặt lịch hẹn. * Thêm thanh toán bằng Momo.

--- a/Areas/Admin/Views/BangGia/Add.cshtml
+++ b/Areas/Admin/Views/BangGia/Add.cshtml
@@ -22,6 +22,14 @@
         <span asp-validation-for="MoTa" class="text-danger"></span>
 
     </div>
+    <br />
+    <div class="form-group">
+        <label asp-for="ChiTiet"></label>
+        <textarea asp-for="ChiTiet" class="form-control"></textarea>
 
+        <span asp-validation-for="ChiTiet" class="text-danger"></span>
+
+    </div>
+    <br />
     <button type="submit" class="btn btn-primary">Add</button>
 </form>
