--- a/Views/DatHen/Index.cshtml
+++ b/Views/DatHen/Index.cshtml
@@ -28,7 +28,7 @@
                         <td>@datHen.HoTen</td>
                         <td>@datHen.SDT</td>
                         <td>@datHen.NgayHen.ToString("dd/MM/yyyy")</td>
-                        <td>@datHen.GioHen.ToString("HH:mm")</td>
+                        <td>@datHen.GioHen</td>
                         <td>@datHen.MaDichVu</td>
                         <td>@datHen.TrangThai</td>
                     </tr>
