--- a/Views/Home/BangGia.cshtml
+++ b/Views/Home/BangGia.cshtml
@@ -17,6 +17,12 @@
     .bg-light-blue {
         background-color: #e0f7fa; /* Màu xanh nhạt */
     }
+
+    /* Xóa bỏ các kiểu mặc định của thẻ <a> */
+    .card-link {
+        text-decoration: none; /* Bỏ gạch chân */
+        color: inherit; /* Giữ màu của thẻ cha */
+    }
 </style>
 
 <br />
@@ -28,21 +34,17 @@
         {
             <div class="col mb-4">
                 <!-- Thêm lớp mb-4 để tạo khoảng cách giữa các hàng -->
-                <div class="card bg-light-blue">
-                    <div class="card-body">
-                        <h5 class="card-title" style="color:deepskyblue">@bangGia.TenDichVu</h5>
-                        <p class="card-text fw-bold">Giá dịch vụ: @string.Format("{0:N0} VND", bangGia.GiaDichVu)</p>
-                        <p class="card-text">@bangGia.MoTa</p>
+                <a href="@Url.Action("ChiTiet", "Home", new { id = bangGia.MaDichVu })" class="card-link">
+                    <div class="card bg-light-blue">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color:deepskyblue">@bangGia.TenDichVu</h5>
+                            <p class="card-text fw-bold">Giá dịch vụ: @string.Format("{0:N0} VND", bangGia.GiaDichVu)</p>
+                            <p class="card-text">@bangGia.MoTa</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         }
-    </div>
-</div>
-
-<div id="smallPopup" class="popup">
-    <div class="popup-content">
-        <p>Thêm thành công.</p>
     </div>
 </div>
 
