--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/icofont/1.0.1/css/icofont.min.css" integrity="sha384-..." crossorigin="anonymous">
     <script>
         $(function () {
             $("#autocomplete").autocomplete({
@@ -53,7 +54,6 @@
             opacity: 1;
         }
 
-        /* Hiệu ứng khi hover vào ảnh */
         .img-container:hover img {
             transform: scale(1.1); /* Phóng to ảnh khi hover */
         }
@@ -62,6 +62,20 @@
             color: deepskyblue;
             transform: scale(1.3);
         }
+
+        main {
+            margin-bottom: 2rem;
+        }
+
+        /* Ensure the schedule section is clear and not overlapping */
+        .schedule {
+            clear: both;
+            padding: 2rem 0;
+        }
+
+            .schedule .single-schedule {
+                margin-bottom: 1.5rem;
+            }
     </style>
 
 }
@@ -95,3 +109,280 @@
         </section>
     </div>
 </main>
+<br />
+<section class="green-card">
+    <div class="container">
+        <div class="row"></div>
+    </div>
+</section>
+<section class="schedule">
+    <div class="container">
+        <div class="schedule-inner">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <!-- single-schedule -->
+                    <div class="single-schedule first">
+                        <div class="inner">
+                            <div class="single-content">
+                                <span>Lorem Amet</span>
+                                <h4>Emergency Cases</h4>
+                                <p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
+                                <a href="#">LEARN MORE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <!-- single-schedule -->
+                    <div class="single-schedule middle">
+                        <div class="inner">
+                            <div class="single-content">
+                                <span>Fusce Porttitor</span>
+                                <h4>Doctors Timetable</h4>
+                                <p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
+                                <a href="#">LEARN MORE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-12">
+                    <!-- single-schedule -->
+                    <div class="single-schedule last">
+                        <div class="inner">
+                            <div class="single-content">
+                                <span>Donec luctus</span>
+                                <h4>Opening Hours</h4>
+                                <ul class="time-sidual">
+                                    <li class="day">Monday - Friday <span>8.00-20.00</span></li>
+                                    <li class="day">Saturday <span>9.00-18.30</span></li>
+                                    <li class="day">Monday - Thusday <span>9.00-15.00</span></li>
+                                </ul>
+                                <a href="#">LEARN MORE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="green-card">
+    <div class="container">
+        <div class="row"></div>
+    </div>
+</section>
+
+<section class="Feautes section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">
+                    <h2>We Are Always Ready to Help You & Your Family</h2>
+                    <img src="~/Images/section-img.png" alt="#">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-12">
+                <!-- Start Single features -->
+                <div class="single-features">
+                    <div class="signle-icon">
+                        <i class="icofont icofont-ambulance-cross"></i>
+                    </div>
+                    <h3>Emergency Help</h3>
+                    <p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
+                </div>
+                <!-- End Single features -->
+            </div>
+            <div class="col-lg-4 col-12">
+                <!-- Start Single features -->
+                <div class="single-features">
+                    <div class="signle-icon">
+                        <i class="icofont icofont-medical-sign-alt"></i>
+                    </div>
+                    <h3>Enriched Pharmecy</h3>
+                    <p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
+                </div>
+                <!-- End Single features -->
+            </div>
+            <div class="col-lg-4 col-12">
+                <!-- Start Single features -->
+                <div class="single-features last">
+                    <div class="signle-icon">
+                        <i class="icofont icofont-stethoscope"></i>
+                    </div>
+                    <h3>Medical Treatment</h3>
+                    <p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
+                </div>
+                <!-- End Single features -->
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="green-card">
+    <div class="container">
+        <div class="row"></div>
+    </div>
+</section>
+
+<section class="services section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">
+                    <h2>We Offer Different Services To Improve Your Health</h2>
+                    <img src="~/Images/section-img.png" alt="#">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-12">
+                <!-- Start Single Service -->
+                <div class="single-service">
+                    <i class="icofont icofont-prescription"></i>
+                    <h4><a href="service-details.html">General Treatment</a></h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
+                </div>
+                <!-- End Single Service -->
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <!-- Start Single Service -->
+                <div class="single-service">
+                    <i class="icofont icofont-tooth"></i>
+                    <h4><a href="service-details.html">Teeth Whitening</a></h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
+                </div>
+                <!-- End Single Service -->
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <!-- Start Single Service -->
+                <div class="single-service">
+                    <i class="icofont icofont-heart-alt"></i>
+                    <h4><a href="service-details.html">Heart Surgery</a></h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
+                </div>
+                <!-- End Single Service -->
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <!-- Start Single Service -->
+                <div class="single-service">
+                    <i class="icofont icofont-listening"></i>
+                    <h4><a href="service-details.html">Ear Treatment</a></h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
+                </div>
+                <!-- End Single Service -->
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <!-- Start Single Service -->
+                <div class="single-service">
+                    <i class="icofont icofont-eye-alt"></i>
+                    <h4><a href="service-details.html">Vision Problems</a></h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
+                </div>
+                <!-- End Single Service -->
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <!-- Start Single Service -->
+                <div class="single-service">
+                    <i class="icofont icofont-blood"></i>
+                    <h4><a href="service-details.html">Blood Transfusion</a></h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>
+                </div>
+                <!-- End Single Service -->
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="green-card">
+    <div class="container">
+        <div class="row"></div>
+    </div>
+</section>
+
+<section class="pricing-table section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">
+                    <h2>We Provide You The Best Treatment In Resonable Price</h2>
+                    <img src="~/Images/section-img.png" alt="#">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- Single Table -->
+            <div class="col-lg-4 col-md-12 col-12">
+                <div class="single-table">
+                    <!-- Table Head -->
+                    <div class="table-head">
+                        <h4 class="title">Plastic Suggery</h4>
+                        <div class="price">
+                            <p class="amount">$199<span>/ Per Visit</span></p>
+                        </div>
+                    </div>
+                    <!-- Table List -->
+                    <ul class="table-list">
+                        <li></i>Lorem ipsum dolor sit</li>
+                        <li></i>Cubitur sollicitudin fentum</li>
+                        <li></i>Nullam interdum enim</li>
+                        <li></i>Donec ultricies metus</li>
+                        <li></i>Pellentesque eget nibh</li>
+                    </ul>
+                    <!-- Table Bottom -->
+                </div>
+            </div>
+            <!-- End Single Table-->
+            <!-- Single Table -->
+            <div class="col-lg-4 col-md-12 col-12">
+                <div class="single-table">
+                    <!-- Table Head -->
+                    <div class="table-head">
+                        <h4 class="title">Teeth Whitening</h4>
+                        <div class="price">
+                            <p class="amount">$299<span>/ Per Visit</span></p>
+                        </div>
+                    </div>
+                    <!-- Table List -->
+                    <ul class="table-list">
+                        <li></i>Lorem ipsum dolor sit</li>
+                        <li></i>Cubitur sollicitudin fentum</li>
+                        <li></i>Nullam interdum enim</li>
+                        <li></i>Donec ultricies metus</li>
+                        <li></i>Pellentesque eget nibh</li>
+                    </ul>
+                    <!-- Table Bottom -->
+                </div>
+            </div>
+            <!-- End Single Table-->
+            <!-- Single Table -->
+            <div class="col-lg-4 col-md-12 col-12">
+                <div class="single-table">
+                    <!-- Table Head -->
+                    <div class="table-head">
+                        <h4 class="title">Heart Suggery</h4>
+                        <div class="price">
+                            <p class="amount">$399<span>/ Per Visit</span></p>
+                        </div>
+                    </div>
+                    <!-- Table List -->
+                    <ul class="table-list">
+                        <li></i>Lorem ipsum dolor sit</li>
+                        <li></i>Cubitur sollicitudin fentum</li>
+                        <li></i>Nullam interdum enim</li>
+                        <li></i>Donec ultricies metus</li>
+                        <li></i>Pellentesque eget nibh</li>
+                    </ul>
+                    <!-- Table Bottom -->
+                </div>
+            </div>
+            <!-- End Single Table-->
+        </div>
+    </div>
+</section>
+
