--- a/Areas/Employee/Views/BangGia/Update.cshtml
+++ b/Areas/Employee/Views/BangGia/Update.cshtml
@@ -18,12 +18,20 @@
     </div>
     <div class="form-group">
         <label asp-for="MoTa"></label>
-<textarea asp-for="MoTa" class="form-control"></textarea>
+        <textarea asp-for="MoTa" class="form-control"></textarea>
 
         <span asp-validation-for="MoTa" class="text-danger"></span>
 
     </div>
+    <br />
+    <div class="form-group">
+        <label asp-for="ChiTiet"></label>
+        <textarea asp-for="ChiTiet" class="form-control"></textarea>
 
+        <span asp-validation-for="ChiTiet" class="text-danger"></span>
+
+    </div>
+    <br />
     <button type="submit" class="btn btn-primary">Update</button>
 
 </form>
