--- a/Areas/Employee/Views/LichHen/CapNhat.cshtml
+++ b/Areas/Employee/Views/LichHen/CapNhat.cshtml
@@ -8,11 +8,6 @@
 <h1 class="text-center mb-4 text-primary">@ViewData["Title"]</h1>
 
 <script>
-    function hoanThanhTuVan(id) {
-        if (confirm("Bạn có chắc chắn muốn hoàn thành tư vấn cho lịch hẹn này không?")) {
-            window.location.href = "/Employee/LichHen/HoanThanhTuVan?id=" + id;
-        }
-    }
     function quayLai() {
         window.history.back();
     }
@@ -21,8 +16,83 @@
             window.location.href = "/Employee/LichHen/Cancel?id=" + id;
         }
     }
+    function confirmDone(id) {
+        if (confirm("Khách đã tới trung tâm nha khoa và hoàn thành hẹn?")) {
+            window.location.href = "/Employee/LichHen/DaHoanThanhHen?id=" + id;
+        }
+    }
+    function openConfirmationModal(id) {
+        // Lấy modal và nút xác nhận
+        var modal = $('#confirmationModal');
+        var confirmButton = modal.find('#confirmButton');
+
+        // Gán URL dựa trên ID của lịch hẹn
+        var url = "/Employee/LichHen/DaHoanThanhHen?id=" + id;
+        confirmButton.attr('href', url);
+
+        // Hiển thị modal
+        modal.modal('show');
+    }
+    function cancelConfirmationModal() {
+        // Lấy modal và ẩn nó
+        var modal = $('#confirmationModal');
+        modal.modal('hide');
+    }
+
+    function openConfirmationModal02(id) {
+        // Lấy modal và nút xác nhận
+        var modal = $('#confirmationModal02');
+        var confirmButton = modal.find('#confirmButton');
+
+        // Gán URL dựa trên ID của lịch hẹn
+        var url = "/Employee/LichHen/Cancel?id=" + id;
+        confirmButton.attr('href', url);
+
+        // Hiển thị modal
+        modal.modal('show');
+    }
+    function cancelConfirmationModal02() {
+        // Lấy modal và ẩn nó
+        var modal = $('#confirmationModal02');
+        modal.modal('hide');
+    }
 </script>
 <br />
+
+<div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Xác Nhận</h5>
+            </div>
+            <div class="modal-body">
+                Khách đã tới trung tâm nha khoa và hoàn thành hẹn ?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="cancelConfirmationModal()">Huỷ</button>
+                <a id="confirmButton" class="btn btn-primary">Xác Nhận</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="confirmationModal02" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Xác Nhận</h5>
+            </div>
+            <div class="modal-body">
+                Bạn có chắc chắn muốn huỷ lịch hẹn này không ?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="cancelConfirmationModal02()">Huỷ</button>
+                <a id="confirmButton" class="btn btn-primary">Xác Nhận</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -33,11 +103,12 @@
                     <p class="card-text"><strong>ID Lịch Hẹn:</strong> @Model.Id</p>
                     <p class="card-text"><strong>Số Điện Thoại:</strong> @Model.SDT</p>
                     <p class="card-text"><strong>Ngày Đặt Hẹn:</strong> @Model.NgayHen.ToString("dd/MM/yyyy")</p>
-                    <p class="card-text"><strong>Giờ Đặt Hẹn:</strong> @Model.GioHen.ToString("HH:mm")</p>
+                    <p class="card-text"><strong>Giờ Đặt Hẹn:</strong> @Model.GioHen</p>
                     <p class="card-text"><strong>Dịch Vụ Đặt Hẹn:</strong> @ViewBag.TenDichVu</p>
                     <br />
                     <div class="d-flex justify-content-between">
-                        <a class="btn btn-danger me-2 btn-rounded" style="width: 150px;" onclick="confirmCancel('@Model.Id')">Huỷ</a>
+                        <a class="btn btn-danger me-2 btn-rounded" style="width: 150px;" onclick="openConfirmationModal02('@Model.Id')">Huỷ Lịch Hẹn</a>
+                        <a class="btn btn-success me-2 btn-rounded" style="width: 150px;" onclick="openConfirmationModal('@Model.Id')">Đã Hoàn Thành</a>
                         <button class="btn btn-secondary" onclick="quayLai()">Quay lại</button>
                     </div>
                 </div>
