--- a/Areas/Employee/Views/LichHen/Details.cshtml
+++ b/Areas/Employee/Views/LichHen/Details.cshtml
@@ -8,11 +8,6 @@
 <h1 class="text-center mb-4 text-primary">@ViewData["Title"]</h1>
 
 <script>
-    function hoanThanhTuVan(id) {
-        if (confirm("Bạn có chắc chắn muốn hoàn thành tư vấn cho lịch hẹn này không?")) {
-            window.location.href = "/Employee/LichHen/HoanThanhTuVan?id=" + id;
-        }
-    }
     function quayLai() {
         window.history.back();
     }
@@ -28,7 +23,7 @@
                     <p class="card-text"><strong>ID Lịch Hẹn:</strong> @Model.Id</p>
                     <p class="card-text"><strong>Số Điện Thoại:</strong> @Model.SDT</p>
                     <p class="card-text"><strong>Ngày Đặt Hẹn:</strong> @Model.NgayHen.ToString("dd/MM/yyyy")</p>
-                    <p class="card-text"><strong>Giờ Đặt Hẹn:</strong> @Model.GioHen.ToString("HH:mm")</p>
+                    <p class="card-text"><strong>Giờ Đặt Hẹn:</strong> @Model.GioHen</p>
                     <p class="card-text"><strong>Dịch Vụ Đặt Hẹn:</strong> @ViewBag.TenDichVu</p>
                     <br />
                     <div class="d-flex justify-content-between">
