--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -38,20 +38,40 @@
                                 <button id="login-submit" type="submit" class="btn btn-primary btn-lg">Đăng nhập</button>
                             </div>
 
-                            <hr class="my-4">
-
-                            <div style="background-color: aliceblue; border-radius: 1rem;">
-                                <button data-mdb-button-init data-mdb-ripple-init class="btn btn-lg btn-block btn-primary mb-2" style="background-color: #dd4b39; margin-bottom: 10px;"
-                                        type="submit">
-                                    <i class="fab fa-google me-2"></i> Đăng nhập với Google
-                                </button>
-                                <button data-mdb-button-init data-mdb-ripple-init class="btn btn-lg btn-block btn-primary" style="background-color: #3b5998;"
-                                        type="submit">
-                                    <i class="fab fa-facebook-f me-2"></i> Đăng nhập với Facebook
-                                </button>
-                            </div>
-
+                          
                         </form>
+
+                        <div class="col-md-12">
+                            <section>
+                                <hr />
+                                @{
+                                    if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                                    {
+                                        <div>
+                                            <p>
+                                                There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                                    article
+                                                    about setting up this ASP.NET application to support logging in via external services
+                                                </a>.
+                                            </p>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                            <div>
+                                                <p>
+                                                    @foreach (var provider in Model.ExternalLogins!)
+                                                    {
+                                                        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account" style="background-color: #FFa074;"> Đăng nhập với @provider.DisplayName</button>
+                                                    }
+                                                </p>
+                                            </div>
+                                        </form>
+                                    }
+                                }
+                            </section>
+                        </div>
 
                     </div>
                 </div>
