--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,69 +1,80 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Đăng Ký Tài Khoản Thành Viên";
+    ViewData["Title"] = "Register";
 }
 
-<section class="vh-100" ">
-    <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="card shadow-2-strong" style="border-radius: 1rem;">
-                    <div class="card-body p-4 text-center" style="background-color: aliceblue; border-radius: 1rem;">
-                        <h3 class="mb-4">Đăng ký Thành Viên</h3>
+<h1>@ViewData["Title"]</h1>
 
-                        <div data-mdb-input-init class="form-outline mb-3">
-                            <label class="form-label" for="typeEmailX-2">Họ Tên</label>
-                            <input asp-for="Input.FullName" class="form-control form-control-lg" autocomplete="FullName" aria-required="true" />                           
-                            <span asp-validation-for="Input.FullName" class="text-danger"></span>
-                        </div>
-
-                        <div data-mdb-input-init class="form-outline mb-3">
-                            <label class="form-label" for="typePasswordX-2">Email</label>
-                            <input asp-for="Input.Email" class="form-control form-control-lg" autocomplete="username" aria-required="true" />
-                            <span asp-validation-for="Input.Email" class="text-danger"></span>
-                        </div>
-
-                        <div data-mdb-input-init class="form-outline mb-3">
-                            <label class="form-label" for="typePasswordX-2">Mật khẩu</label>
-                            <input asp-for="Input.Password" class="form-control form-control-lg" autocomplete="new-password" aria-required="true" />
-                            <span asp-validation-for="Input.Password" class="text-danger"></span>
-                        </div>
-
-                        <div data-mdb-input-init class="form-outline mb-3">
-                            <label class="form-label" for="typePasswordX-2">Xác nhận mật khẩu</label>
-                            <input asp-for="Input.ConfirmPassword" class="form-control form-control-lg" autocomplete="new-password" aria-required="true" />
-                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                        </div>
-
-                        <div data-mdb-input-init class="form-outline mb-3">
-                            <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-control form-control-lg">
-                                <option disabled selected>-Chọn vai trò-</option>
-                            </select>
-                        </div>
-
-                        <button id="registerSubmit" type="submit" class="btn btn-primary btn-lg btn-block">Đăng Ký</button>
-
-                        <hr class="my-4">
-
-                        <!-- Nút đăng ký bằng Google và Facebook -->
-                        <div class="mb-3">
-                            <!-- Nút đăng ký bằng Google -->
-                            <button type="button" class="btn btn-sm btn-danger">
-                                <i class="fab fa-google me-2"></i> Với Google
-                            </button>
-                            <!-- Nút đăng ký bằng Facebook -->
-                            <button type="button" class="btn btn-sm btn-primary">
-                                <i class="fab fa-facebook-f me-2"></i> Với Facebook
-                            </button>
-                        </div>
-
-                    </div>
-                </form>
+<div class="row">
+    <div class="col-md-4">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            <h2>Create a new account.</h2>
+            <hr />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-floating">
+                <input asp-for="Input.FullName" class="form-control" autocomplete="FullName" aria-required="true" />
+                <label asp-for="Input.FullName">FullName    </label>
+                <span asp-validation-for="Input.FullName" class="text-danger"></span>
             </div>
-        </div>
+
+            <div class="form-floating">
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Email"></label>
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+                <label asp-for="Input.Password"></label>
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                <label asp-for="Input.ConfirmPassword"></label>
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating">
+                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-control">
+                    <option disabled selected>-Select Role-</option>
+                </select>
+            </div>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+        </form>
     </div>
-</section>
+    <div class="col-md-6 col-md-offset-2">
+        <section>
+            <h3>Use another service to register.</h3>
+            <hr />
+            @{
+                if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                {
+                    <div>
+                        <p>
+                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                article
+                                about setting up this ASP.NET application to support logging in via external services
+                            </a>.
+                        </p>
+                    </div>
+                }
+                else
+                {
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                        <div>
+                            <p>
+                                @foreach (var provider in Model.ExternalLogins!)
+                                {
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                }
+            }
+        </section>
+    </div>
+</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
