--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKVBKC5M4b9J1l91F0ekIBKvzl5A2Om7O1mNABf5VbR5bOn5aw7jup7Vfmg3mG5B61i3mg==" crossorigin="anonymous" />
     <style>
         .footer-spacing {
-            margin-top: 50px; /* Thay đổi giá trị theo nhu cầu của bạn */
+            margin-top: 50px;
         }
     </style>
 </head>
@@ -52,7 +52,7 @@
                                     <a id="manage" class="nav-link text-danger" asp-area="Employee" asp-controller="BangGia" asp-action="Index">Quản Lý Dịch Vụ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-danger" asp-area="Employee" asp-controller="Order" asp-action="Index">Quản Lý Lịch Hẹn</a>
+                                    <a class="nav-link text-danger" asp-area="Employee" asp-controller="LichHen" asp-action="Index">Quản Lý Lịch Hẹn</a>
                                 </li>
                             }
                         }
@@ -60,15 +60,17 @@
                     </ul>
                 </div>
 
+                @* Thanh tìm kiếm *@
                 <form action="@Url.Action("Search", "Home")" method="get" class="search-form">
                     <input id="autocomplete" type="text" name="query" class="search-input" placeholder="Tìm kiếm dịch vụ..." />
                     <button type="submit" class="search-button">Tìm</button>
                 </form>
 
-
                 <partial name="_LoginPartial" />
             </div>
         </nav>
+    
+
     </header>
 
     <div class="container">
@@ -96,11 +98,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <!-- Đoạn mã iframe -->
+                    <!-- Lấy map từ Google Map -->
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1647.4958000049492!2d106.78451288004783!3d10.85505699455519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175276e7ea103df%3A0xb6cf10bb7d719327!2zSFVURUNIIC0gxJDhuqFpIGjhu41jIEPDtG5nIG5naOG7hyBUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1712667175017!5m2!1svi!2s" width="100%" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
+        <iframe allow="microphone;"
+                width="350"
+                height="430"
+                src="https://console.dialogflow.com/api-client/demo/embedded/e6c4b9c1-1021-4904-9056-c8a4a34b080f">
+        </iframe>
     </footer>
 
 
@@ -113,7 +120,7 @@
         }
     </style>
 
-
+    @* Mã Javascript của chức năng Autocomplete  *@
     @section Scripts
     {
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
